tests/ui/typeck/issue-57673-ice-on-deref-of-boxed-trait.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57673-ice-on-deref-of-boxed-trait.rs:5:5
   |
LL |     *x
   |     ^^ expected `()`, found `dyn Iterator`
   |
   = note: expected unit type `()`
           found trait object `(dyn Iterator<Item = ()> + 'static)`
help: try adding a return type
   |
LL | fn ice(x: Box<dyn Iterator<Item=()>>) -> (dyn Iterator<Item = ()> + 'static) {
   |                                       ++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
